# NumPl

./: AUTHORS  ChangeLog  INSTALL  LICENSE  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  aclocal.m4  analyze.c  analyze.h  common.c  common.h  config.h.in  configure  configure.ac  constants.c  constants.h  convert.c  convert.h  digging_hole.c  doxygen.cfg  fish.c  generate.c  generate.h  inline_functions.h  kill_hidden_single.c  kill_single.c  killer.h  locked_candidate.c  mainpage.txt  memo.txt  multi-solve.c  multi-solve.h  normalize.c  normalize.h  numpl.h  solve.c  (+4 more)
src/: Makefile.am  Makefile.in  analyze.c  analyze.h  analyze_main.c  common.c  common.h  config.h  config.h.in  constants.h  convert.c  convert.h  convert_main.c  digging_hole.c  fish.c  generate.c  generate.h  inline_functions.h  kill_single.c  killer.h  locked_candidate.c  normalize.c  normalize.h  normalize_main.c  numpl.h  solve.c  solve.h  xsadd.h  xywing.c  xyzwing.c
src/6x6/: Makefile.am  Makefile.private  analyze6x6.c  analyze6x6_main.c  common6x6.c  constants6x6.c  convert6x6.c  convert6x6.h  convert6x6_main.c  convert_common.c  fish6x6.c  generate6x6.c  kill_hidden_single6x6.c  kill_single6x6.c  locked_candidate6x6.c  multi-solve6x6.c  normalize6x6.c  normalize6x6.h  normalize6x6_main.c  numpl6x6.h  solve6x6.c  touple6x6.c  xsadd6x6.c  xywing6x6.c  xyzwing6x6.c
test/: Makefile  test_counterpos.c  test_pointer.c
